# dotfiles

./: .gitignore  README.md  bash_profile  bash_profile.sh  bashrc  bashrc.sh  duplicity-home-folder-backup.sh  gitconfig  handler.sh  inputrc  install.sh  mouse.sh  neovim.init.vim  neovim.minimal.init.vim  rc.lua  remote-backup.sh  skippy-xd.rc  spacemacs  spacemacs.old  tmux.conf  vimrc  xinitrc  xmonad.hs
configs/: add_xfce4_keyboard_shortcuts.sh  etc_udev_rules.d_98-usb-dev-boards.rules  fix_xfconf_keybindings.py  lock_screen@.service  logind.conf  minimal_border_xfce4_theme.py
dwm/: CMakeLists.txt  config.h  config.mk  dwm.c  dwm.c.orig  dwm_status_display.py
dwm/status_display/: status_display.c  status_display.h
graphics/cube frame illusion/: cube frame.blend  cube frame.blend1  cube_frame.scad  test.xcf
graphics/dragon_curve_wallpaper/: dragon_curve.xcf  git_info.txt
src/: date_range.py  fast_rand.c  rename_template.sh  todays_date.sh
src/bash/: Open_in_Terminal  attic_backup.sh  capslock_indicator.sh  git-info.sh  index  rename_template.sh  toggle_touchpad_enabled.sh
src/c/: pointer_ring.c
src/cpp/: CMakeLists.txt  fan_control.cpp  fast_rand.c  power_light.cpp  rename_template.cpp
src/go/: hosts.go  rename-template.go  urls.txt
src/go/tmux_status_display/: tmux_status_display.go
src/go/triangle_puzzle/: generics.go  main.go
src/haskell/rename_template/: ChangeLog.md  LICENSE  Main.hs  rename-template.cabal
src/js/: get_secure_shell_colors.js
src/pointer_ring/: pointer_ring.c  pointer_ring.rs  pointer_ring.rust
src/python/: date_range.py  dynalist-notes-grep.py  find_duplicate_files.py  hosts.py  jupyter_notebook_opener.py  rename-template.py  tmux_status_display.py  watchfile.py
src/rust/rename-template/: Cargo.toml  Justfile  rustfmt.toml
src/rust/rename-template/src/: main.rs
st/: build.sh  config.def.h  config.h  config.mk  st.c
system_specific/: chromebook_bash_profile.sh  chromebook_bashrc.sh  thinkpad_bash_profile.sh  thinkpad_bashrc.sh
system_specific/onemix3yoga/: display_resolution_presets.py
system_specific/xps_15_backlight/: xps_15_backlight.go
(+3 files in other folders)
