[package]
name = "rename-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1
incremental = true
lto = "off"

[dependencies]
structopt = { version = "0.3.25", features = [ "paw" ] }
paw = "1.0.0"
itertools = "0.10.3"
clipboard = "0.5.0"
anyhow = "1.0.52"
